--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,20 @@
 		<!--			<artifactId>springfox-boot-starter</artifactId>-->
 		<!--			<version>3.0.0</version>-->
 		<!--		</dependency>-->
+
+		<!-- security -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<!-- jwt -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+
 
 	</dependencies>
 
