--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 5000
+
 spring:
   mvc:
     pathmatch:
@@ -5,14 +8,15 @@ spring:
 
   # datasource setting
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:tcp://localhost/~/test
-    username: sa
-    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://miniproject-db.cjdwdguveoi5.ap-northeast-2.rds.amazonaws.com:3306/miniproject
+    username: admin
+    password: miniadmin
 
   # JPA setting
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    open-in-view: true
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     show-sql: true
     hibernate:
       naming:
