--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 5000
-
 spring:
   mvc:
     pathmatch:
@@ -8,15 +5,21 @@ spring:
 
   # datasource setting
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://miniproject-db.cjdwdguveoi5.ap-northeast-2.rds.amazonaws.com:3306/miniproject
-    username: admin
-    password: miniadmin
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp://localhost/~/test
+    username: sa
+    password:
+# datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://miniproject-db.cjdwdguveoi5.ap-northeast-2.rds.amazonaws.com:3306/miniproject
+#    username: admin
+#    password: miniadmin
 
   # JPA setting
   jpa:
     open-in-view: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+#    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
     hibernate:
       naming:
