--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 			<version>4.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
