--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,20 @@
 server:
-  port: 5000
+  port: 8080
 
 spring:
   mvc:
-    pathmatch:
+    path match:
       matching-strategy: ant_path_matcher
 
-  # datasource setting
-#  datasource:
-#    driver-class-name: org.h2.Driver
-#    url: jdbc:h2:tcp://localhost/~/test
-#    username: sa
-#    password:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://miniproject-db.czvpzexrcqw0.ap-northeast-2.rds.amazonaws.com:3306/miniproject
-    username: admin
-    password: adminmini
+    url: jdbc:mysql://localhost:3306/FPRS?autoReconnect=true
+    username: root
+    password: 1234
 
-  # JPA setting
   jpa:
     open-in-view: true
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-#    database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
     hibernate:
       naming:
