--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/FPRS?autoReconnect=true
+    url: jdbc:mysql://onulstore.czvpzexrcqw0.ap-northeast-2.rds.amazonaws.com:3306/mini?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: 1234
+    password: root1234
 
   jpa:
     open-in-view: true
