--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,6 @@ tasks.withType(JavaCompile) {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.fastcampus.FinancialProductRecommendationServiceApplication.class'
+        attributes 'Main-Class': 'com.fastcampus.FinancialProductRecommendationServiceApplication.Class'
     }
 }
