--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,23 +6,5 @@ spring:
     path match:
       matching-strategy: ant_path_matcher
 
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://onulstore.czvpzexrcqw0.ap-northeast-2.rds.amazonaws.com:3306/mini?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: root1234
-
-  jpa:
-    open-in-view: true
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
-    show-sql: true
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      ddl-auto: update
-      use-new-id-generator-mappings: false
-    properties:
-      hibernate:
-        format_sql: true
-        default_batch_fetch_size: 1000
-    defer-datasource-initialization: true
+  profiles:
+    active: prod
